# methylation-engine

./: .coverage  .gitignore  CHANGELOG.md  README.md  coverage.xml  demo.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md
core/: __init__.py  engine.py
demos/: engine_demo.py  planner_demo.py
docs/: ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Fact Sheet.md  PLANNING.md  QUICKSTART.md  TROUBLESHOOTING.md
methylation_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
methylation_engine/core/: __init__.py  config.py  engine.py  planner.py
tests/: test_config.py  test_engine.py  test_planner.py
