[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methylation-engine"
version = "0.2.0"
description = "Pipeline for DNA methylation study planning and analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Dare Afolabi" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Core + scientific dependencies
dependencies = [
  "numpy>=1.21.0,<2.0.0",
  "pandas>=1.3.0,<3.0.0",
  "scipy>=1.7.0,<2.0.0",
  "statsmodels>=0.13.0,<0.15.0",
  "scikit-learn>=1.0.0,<2.0.0",
  "matplotlib>=3.4.0,<4.0.0",
  "reportlab>=3.6.0,<5.0.0",
  "openpyxl>=3.0.0",
]

# Optional / dev dependencies
[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=3.0.0",
  "black>=22.0.0",
  "flake8>=7.3.0",
  "isort>=7.0.0",
  "mypy>=0.950",
  # "numba>=0.54.0",  # Optional JIT
  # "joblib>=1.1.0",  # Optional parallel processing
]

[tool.setuptools]
package-dir = { "" = "." }
packages = { find = { where = ["."] } }

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
namespace_packages = true
explicit_package_bases = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"